--- a/package.json
+++ b/package.json
@@ -3,15 +3,32 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "babel-watch koa.js"
+  },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "koa": "^2.5.0",
     "koa-static": "^4.0.2",
-    "socket.io": "^2.1.0"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "socket.io": "^2.1.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
+  },
+  "devDependencies": {
+    "babel-watch": "^2.0.7",
+    "koa-webpack": "^3.0.2"
   }
 }
