--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.3.2",
     "socket.io": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "vue": "^2.5.16",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   },
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "babel-watch": "^2.0.7",
-    "koa-webpack": "^3.0.2"
+    "koa-webpack": "^3.0.2",
+    "vue-loader": "^14.2.2"
   }
 }
