--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "koa": "^2.5.0",
     "koa-static": "^4.0.2",
     "react": "^16.3.2",
@@ -19,6 +20,7 @@
     "socket.io": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "vue": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   },
@@ -26,9 +28,13 @@
     "presets": [
       "es2015",
       "react"
+    ],
+    "plugins": [
+      "transform-runtime"
     ]
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-watch": "^2.0.7",
     "koa-webpack": "^3.0.2",
     "vue-loader": "^14.2.2"
