--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babylon": "^6.18.0",
     "css-loader": "^0.28.11",
     "koa": "^2.5.0",
     "koa-static": "^4.0.2",
