--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@babel/traverse": "^7.0.0-beta.46",
     "babel-core": "^6.26.0",
+    "babel-generator": "^6.26.1",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-types": "^6.26.0",
     "babylon": "^6.18.0",
     "css-loader": "^0.28.11",
     "koa": "^2.5.0",
