--- a/package.json
+++ b/package.json
@@ -40,6 +40,13 @@
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-watch": "^2.0.7",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.1.0",
     "koa-webpack": "^3.0.2",
     "vue-loader": "^14.2.2"
   }
