--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^0.28.11",
     "koa": "^2.5.0",
     "koa-static": "^4.0.2",
+    "prettier": "^1.12.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "socket.io": "^2.1.0",
